deploy on github pages

--- a/e/index.html
+++ b/e/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Raphaël · Roundabout</title>
+        <title>TheDAO hack trace</title>
         <link rel="stylesheet" href="demo.css" type="text/css" media="screen">
     </head>
     <body>
